--- a/CoinApi/pom.xml
+++ b/CoinApi/pom.xml
@@ -80,6 +80,34 @@
 		</plugins>
 	</build>
 	<packaging>jar</packaging>
+	<name>CoinApi for CoinSystem</name>
+	<description>That is the Api for the CoinSystem
+    </description>
+	<url>https://github.com/didi1150/CoinAPi</url>
+
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+		</license>
+	</licenses>
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
+
+	<scm>
+		<connection>scm:git:git://github.com/didi1150/CoinAPi.git</connection>
+		<developerConnection>scm:git:git://github.com/didi1150/CoinAPi.git</developerConnection>
+		<url>https://github.com/didi1150/CoinAPi</url>
+	</scm>
 	<repositories>
 		<repository>
 			<id>spigot-repo</id>
