--- a/CoinApi/pom.xml
+++ b/CoinApi/pom.xml
@@ -86,6 +86,12 @@
 		</repository>
 	</distributionManagement>
 
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+		</license>
+	</licenses>
 	<scm>
 		<connection>scm:git:git://github.com/didi1150/CoinAPi.git</connection>
 		<developerConnection>scm:git:git://github.com/didi1150/CoinAPi.git</developerConnection>
