--- a/CoinApi/pom.xml
+++ b/CoinApi/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.github.didi1150</groupId>
 	<artifactId>CoinApi</artifactId>
-	<version>1.3</version>
+	<version>1.</version>
 	<build>
 		<plugins>
 			<plugin>
@@ -42,6 +42,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<source>8</source>
+				</configuration>
 				<version>2.9.1</version>
 				<executions>
 					<execution>
